# EEL-5739_Internet-of-Things-Security-and-Privacy

./: IoT_HW1.docx  IoT_Homework_2.docx  README.md
Lab0/iot_labs/: Makefile  platformio.ini
Lab0/iot_labs/src/: main.c
Lab0/iot_labs/src/components/modules/cryptoauthlib/: CMakeLists.txt
Lab0/iot_labs/src/components/modules/cryptoauthlib/lib/: cryptoauthlib.c
Lab0/iot_labs/src/components/modules/cryptoauthlib/lib/basic/: atca_basic.c
Lab0/iot_labs/src/components/modules/cryptoauthlib/lib/hal/: hal_esp32_i2c.c
Lab1/: IoT_Lab1_UART-1.docx  Lab1_Serial_Connection.py  ~$T_Lab1_UART-1.docx
Lab1/iot_labs/: CMakeLists.txt  platformio.ini  sdkconfig.old
Lab2/: IoT-Lab2.docx  ~$T-Lab2.docx
Lab3/: Certificate Generation Guide.docx  mosquitto.conf
Lab4/: IoT_Lab4_wireshark.docx  mosquitto.conf  ~$T_Lab4_wireshark.docx  ~WRL4048.tmp
Lab4/PartnerACertifications_ICreated/: CA.crt.pem  CA.crt.srl  CA.key.pem  broker.crt.pem  broker.csr  broker.key.pem  pub.crt.pem  pub.csr  pub.key.pem  sub.crt.pem  sub.csr  sub.key.pem
Lab5/: IoT-Lab5_.docx  mosquitto.conf
Lab5/Certificates_ESP/: acc425cb3883f075e568f620128e77b34c88f9aa0e172edc578860bfe2881b25-certificate.pem.crt  acc425cb3883f075e568f620128e77b34c88f9aa0e172edc578860bfe2881b25-private.pem.key  acc425cb3883f075e568f620128e77b34c88f9aa0e172edc578860bfe2881b25-public.pem.key
Lab5/Certificates_mosquitto/: 96796329aa12844a8779fca1930be958b4caf523e6aa6fcc562aed3a1070f3f1-certificate.pem.crt  96796329aa12844a8779fca1930be958b4caf523e6aa6fcc562aed3a1070f3f1-private.pem.key  (+1 more)
(+75 files in other folders)
